<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common text -->
    <string name="app_name">AppFountain</string>
    <string name="action_settings">Settings</string>
    <string name="common_internet_unavailable">インターネットに接続されていません</string>

    <!-- LoginActivity -->
    <string name="title_activity_login">ログイン</string>

    <!-- RegisterActivity -->
    <string name="title_activity_register">ユーザ登録</string>
    <string name="register_text">入力は英数字で行ってください</string>
    <string name="register_password_invalid">パスワードが一致していません</string>
    <string name="register_name_length_invalid">usernameは4文字以上32文字以内にしてください</string>
    <string name="register_password_too_short">パスワードは4文字以上にしてください</string>
    <string name="register_user_success">ユーザ登録が完了しました</string>

    <!-- TopPageActivity -->
    <string name="title_activity_top_page">質問一覧</string>
    <string name="top_page_move_post_question">質問投稿</string>

    <!-- PostActivity -->
    <string name="title_activity_post">質問投稿</string>
    <string name="category_text">カテゴリ</string>
    <string name="post_category_spinner_prompt">カテゴリを選択</string>
    <string name="post_ok">投稿する</string>

    <!-- PostBodyActivity -->
    <string name="title_activity_post_body">質問入力</string>
    <string name="post_body_title">質問詳細</string>
    <string name="post_body_ok">OK</string>
    <string name="post_title_placeholder">例：道案内アプリが欲しい</string>

    <!-- UserPageActivity -->
    <string name="title_activity_user_page">ユーザ情報</string>
    <string name="fragment_user_info_text">基本情報</string>
    <string name="fragment_user_question_text">質問一覧</string>
    <string name="fragment_user_answer_text">回答一覧</string>

    <!-- QuestionDetailActivity -->
    <string name="title_activity_question_detail">質問詳細</string>

    <!-- SearchResultActivity -->
    <string name="title_activity_search_result">検索結果</string>
    <string name="drawer_open">open!</string>
    <string name="drawer_close">close!</string>
    <string name="search_text">検索</string>
    <string name="search_hint">検索語を入力</string>
    <string name="comment_text">コメント入力</string>
    <string name="comment_post">コメント投稿</string>
    <string name="title_activity_comment_body">コメント投稿</string>
    <string name="title_text">タイトル</string>
    <string name="post_title_hint">例：道案内アプリが欲しい</string>
    <string name="post_body_hint">例：目的地までのルート、距離、時間がリアルタイムにわかるアプリが欲しいです。よろしくお願いします。</string>
    <string name="post_body_text">質問詳細</string>
    <string name="category_select_text">カテゴリ</string>
    <string name="title_text_with_description">▶タイトル ※(4字以上)</string>
    <string name="post_body_text_with_description">▶質問詳細</string>
    <string name="category_select_text_with_description">▶カテゴリ ※</string>

</resources>